--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
    </div>
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/query-string/7.0.0/index.js" integrity="sha512-rLJ0/GVIutz/QyV1c1DBsF/Xode228cCr9gW5o+Glz8pk3EjqqJxIIggU9li+VtHM28YCRm/rBLK3gUWkDSVjA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
    <script src="socket.io/socket.io.js"></script>
-   <script src="javascripts/main.js"></script>
+   <script type="module" src="javascripts/main.js"></script>
 </body>
 </html>
