--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Painter Login</title>
+    <link rel="stylesheet" href="stylesheets/style.css" />
     <script type="module" src="javascripts/main.js"></script>
 </head>
 <body>
