Moves elements around a bit and adds radio input for color buttons

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,14 @@
     </header>
     <main>
         <div id="loginWrapper">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" placeholder="Username" />
-            <div id="colorWrapper"></div>
+            <div id="usernameWrapper" class="login-box">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" placeholder="Username" />
+            </div>
+            <div id="color-picker" class="login-box">
+                <p>Pick color</p>
+                <div id="colorPicker"></div>
+            </div>
             <button id="loginBtn">Play game</button>
         </div>
     </main>
