--- a/public/game.html
+++ b/public/game.html
@@ -40,5 +40,9 @@
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/query-string/7.0.0/index.js" integrity="sha512-rLJ0/GVIutz/QyV1c1DBsF/Xode228cCr9gW5o+Glz8pk3EjqqJxIIggU9li+VtHM28YCRm/rBLK3gUWkDSVjA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
    <script src="socket.io/socket.io.js"></script>
    <script type="module" src="javascripts/modules/loadGrid.js"></script>
+   <script type="module">
+   import loadGrid from './javascripts/modules/loadGrid.js';
+   loadGrid();
+   </script>
 </body>
 </html>
