--- a/public/game.html
+++ b/public/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="https://kit.fontawesome.com/43ef3c525d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="playerColor"></div>
