--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,22 @@
     <title>Grid Painter Login</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
     <script type="module" src="javascripts/main.js"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Grid Painter</h1>
+        <h1 id="logo">Grid Painter</h1>
+        <img src="stylesheets/img/paint.png" width="350">
     </header>
     <main>
         <div id="loginWrapper">
             <div id="usernameWrapper" class="login-box">
-                <label for="username">Username</label>
+                <label for="username">Choose your username: <br /></label>
                 <input type="text" name="username" id="username" placeholder="Username" />
             </div>
             <div id="color-picker" class="login-box">
-                <p>Pick color</p>
+                <p>Pick a color:</p>
                 <div id="colorPicker"></div>
             </div>
             <button id="loginBtn">Play game</button>
