WIP: Layout updates

--- a/public/game.html
+++ b/public/game.html
@@ -34,8 +34,8 @@
          
         </div>
         <div id="picChat">
-            <div id="pic">picture</div>
-            <div id="chatBox">chat box</div>
+            <div id="pic">Picture</div>
+            <div id="chatBox">Chat</div>
         </div>
    </div>
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/query-string/7.0.0/index.js" integrity="sha512-rLJ0/GVIutz/QyV1c1DBsF/Xode228cCr9gW5o+Glz8pk3EjqqJxIIggU9li+VtHM28YCRm/rBLK3gUWkDSVjA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
