More layout updates

--- a/public/game.html
+++ b/public/game.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grid Painter</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="https://kit.fontawesome.com/43ef3c525d.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div id="playerColor"></div>
-    <div id="playerName"></div>
-    <ul id="color">
-      
-    </ul><br><br>
+
     <div id="container">
+        <div id="playerColor"></div>
+        <ul id="color"></ul><br><br>
+
+        <div id="playersInfo"></div>
         <div id="gridPainter">
             <div id="row1"></div>
             <div id="row2"></div>
@@ -34,8 +36,8 @@
          
         </div>
         <div id="picChat">
-            <div id="pic">Picture</div>
-            <div id="chatBox">Chat</div>
+            <div id="pic"><i class="far fa-image"></i></div>
+            <div id="chatBox"><i class="far fa-comment-dots"></i></div>
         </div>
    </div>
    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/query-string/7.0.0/index.js" integrity="sha512-rLJ0/GVIutz/QyV1c1DBsF/Xode228cCr9gW5o+Glz8pk3EjqqJxIIggU9li+VtHM28YCRm/rBLK3gUWkDSVjA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
