aff facit part after css styling with the last changes in  main

--- a/public/game.html
+++ b/public/game.html
@@ -33,14 +33,31 @@
             <div id="row13"></div>
             <div id="row14"></div>
             <div id="row15"></div>
-         
         </div>
         <div id="picChat">
-            <div id="pic"><i class="far fa-image"></i></div>
-            <div id="chatBox"><i class="far fa-comment-dots"></i></div>
+            <div id="pic">
+                <div id="facitRow1"></div>
+                <div id="facitRow2"></div>
+                <div id="facitRow3"></div>
+                <div id="facitRow4"></div>
+                <div id="facitRow5"></div>
+                <div id="facitRow6"></div>
+                <div id="facitRow7"></div>
+                <div id="facitRow8"></div>
+                <div id="facitRow9"></div>
+                <div id="facitRow10"></div>
+                <div id="facitRow11"></div>
+                <div id="facitRow12"></div>
+                <div id="facitRow13"></div>
+                <div id="facitRow14"></div>
+                <div id="facitRow15"></div>
+                <i class="far fa-image"></i></div>
+            <div id="chatBox"><i class="far fa-comment-dots"></i>
+            </div>
         </div>
    </div>
-   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/query-string/7.0.0/index.js" integrity="sha512-rLJ0/GVIutz/QyV1c1DBsF/Xode228cCr9gW5o+Glz8pk3EjqqJxIIggU9li+VtHM28YCRm/rBLK3gUWkDSVjA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+   <button id="facit">Finish game</button>
+   <button id="reset">Reset game</button>
    <script src="socket.io/socket.io.js"></script>
    <script type="module" src="javascripts/modules/loadGrid.js"></script>
    <script type="module">
