printPlayers to gamepage

--- a/public/game.html
+++ b/public/game.html
@@ -17,10 +17,11 @@
         <ul id="color"></ul><br><br>
 
         <div id="playersInfo">
-
+            
+        </div>
+        <div id="buttonDiv">
             <button id="facit">Finish game</button>
             <button id="reset">Reset game</button>
-            
         </div>
 
         <div id="gridPainter">
