add reload() in deletGrid Func

--- a/public/game.html
+++ b/public/game.html
@@ -57,7 +57,7 @@
         </div>
    </div>
    <button id="facit">Finish game</button>
-   <button id="reset">Reset game</button>
+   <button id="reset">Play again </button>
    <script src="socket.io/socket.io.js"></script>
    <script type="module" src="javascripts/modules/loadGrid.js"></script>
    <script type="module">
