Correcting position for finish and reset game buttons

--- a/public/game.html
+++ b/public/game.html
@@ -16,12 +16,14 @@
         <div id="playerColor"></div>
         <ul id="color"></ul><br><br>
 
-        <div id="playersInfo">
-            
-        </div>
-        <div id="buttonDiv">
-            <button id="facit">Finish game</button>
-            <button id="reset">Reset game</button>
+        <div id="leftDiv">
+
+            <div id="playersInfo"></div>
+
+            <div id="buttonDiv">
+                <button id="facit">Finish game</button>
+                <button id="reset">Reset game</button>
+            </div>
         </div>
 
         <div id="gridPainter">
