--- a/public/game.html
+++ b/public/game.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="https://kit.fontawesome.com/43ef3c525d.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 
 </head>
 <body>
