add function for deleting the grids color and change reset btn to play again that with click goes back to login page

--- a/public/game.html
+++ b/public/game.html
@@ -23,7 +23,7 @@
 
             <div id="buttonDiv">
                 <button id="facit">Finish game</button>
-                <button id="reset">Reset game</button>
+                <button id="reset">Play again</button>
             </div>
         </div>
 
