--- a/public/game.html
+++ b/public/game.html
@@ -20,6 +20,7 @@
 
             <button id="facit">Finish game</button>
             <button id="reset">Reset game</button>
+            <p id="timer"></p>
             
         </div>
 
