--- a/public/game.html
+++ b/public/game.html
@@ -24,6 +24,7 @@
             <div id="buttonDiv">
                 <button id="facit">Finish game</button>
                 <button id="reset">Play again</button>
+                <p id="timer"></p>
             </div>
         </div>
 
