Moves playerInfo to regPlayer and runs in game.html

--- a/public/game.html
+++ b/public/game.html
@@ -72,7 +72,9 @@
    <script type="module" src="javascripts/modules/loadGrid.js"></script>
    <script type="module">
    import loadGrid from './javascripts/modules/loadGrid.js';
+   import storePlayer from './javascripts/modules/randomColor.js';
    loadGrid();
+   storePlayer();
    </script>
 </body>
 </html>
