Adding text after entering username on login page

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
             </div>
 
             <button id="loginBtn">Play game</button>
+            <div id="waitingText"></div>
         </div>
     </main>
     <script src="socket.io/socket.io.js"></script>
