Adding short instruction text in left div

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <main>
         <div id="loginWrapper">
             <div id="usernameWrapper" class="login-box">
-                <label for="username">Choose your username: <br /></label>
+                <label for="username">Enter your username: <br /></label>
                 <input type="text" name="username" id="username" placeholder="Username" />
             </div>
 
